--- a/tera5-rest-web/src/main/webapp/WEB-INF/web.xml
+++ b/tera5-rest-web/src/main/webapp/WEB-INF/web.xml
@@ -70,22 +70,22 @@
     </filter>
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/app/*</url-pattern>
     </filter-mapping>
 
     <servlet>
-        <servlet-name>appServlet</servlet-name>
+        <servlet-name>restApiServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <!-- ApplicationContext for Spring MVC -->
-            <param-value>classpath*:META-INF/spring/spring-mvc.xml</param-value>
+            <!-- ApplicationContext for Spring MVC (REST) -->
+            <param-value>classpath*:META-INF/spring/spring-mvc-rest.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>appServlet</servlet-name>
-        <url-pattern>/</url-pattern>
+        <servlet-name>restApiServlet</servlet-name>
+        <url-pattern>/secure/*</url-pattern>
     </servlet-mapping>
 
     <jsp-config>
@@ -97,6 +97,11 @@
             <include-prelude>/WEB-INF/views/common/include.jsp</include-prelude>
         </jsp-property-group>
     </jsp-config>
+
+	<!-- ウェルカムページ定義 -->
+	<welcome-file-list>
+	  <welcome-file>index.html</welcome-file>
+	</welcome-file-list>
 
     <error-page>
         <error-code>500</error-code>
